Tue Jul 12 17:12:46 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/LoadBalancing.mpc:
	* orbsvcs/tests/Bug_1395_Regression/Bug_1395_Regression.mpc:

	  Add *_IDL projects for compiling *.idl files.  This eliminates
	  duplicate rules that would otherwise result when Makefile.am's
	  are aggregated in the automake build.

Tue Jul 12 13:39:21 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/CosNaming.mpc:
	* orbsvcs/orbsvcs/CosNotification.mpc:
	* orbsvcs/orbsvcs/CosTrading.mpc:
	* orbsvcs/orbsvcs/DsEventLogAdmin.mpc:
	* orbsvcs/orbsvcs/DsLogAdmin.mpc:
	* orbsvcs/orbsvcs/DsNotifyLogAdmin.mpc:

	  Make _IDL projects unconditional now that Chad has enhanced
	  MPC to support custom_only builds for VC++ projects.

Tue Jul 12 18:07:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Upcall_Wrapper.cpp:
          Fixed compile errors with msvc6

Tue Jul 12 18:04:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/Server_Request_Interceptor.cpp:
          Added missing include

Tue Jul 12 17:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Request_Context_Repository.{h,cpp}:
          Fixed compile errors

Tue Jul 12 08:56:03 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/tests/ImplRepo/run_test.pl:

          Ensure that old exe files are deleted before new ones are copied in
        the nt_service_ir test.
          Make the nt_service_ir test fail more quickly when an error occurs.

Tue Jul 12 08:33:05 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tests/RTCORBA/Banded_Connections/bands.irix:
        * tests/RTCORBA/Banded_Connections/run_test.pl:
        * tests/RTCORBA/MT_Client_Protocol_Priority/run_test.pl:

          Added support for IRIX.

        * tests/RTCORBA/Collocation/continuous.conf: